--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy":"gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "terser": "^5.27.1",
     "vite": "^5.1.0"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "kaboom": "^3000.1.17"
   }
 }
